[gd_scene load_steps=8 format=3 uid="uid://8fy7omnkotbe"]

[ext_resource type="Script" path="res://scripts/pressure_plate.gd" id="1_g8tcr"]
[ext_resource type="AudioStream" uid="uid://dc5qwixlnybli" path="res://resources/sounds/button_on.wav" id="2_345y0"]
[ext_resource type="AudioStream" uid="uid://ddm55hv2wmh3u" path="res://resources/sounds/button_off.wav" id="3_tn8vh"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sx3oq"]
height = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_p34qk"]
height = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qurq8"]
albedo_color = Color(0.658824, 0.105882, 0.105882, 1)
emission = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_81apy"]
material = SubResource("StandardMaterial3D_qurq8")
height = 0.1
radial_segments = 32
rings = 1
cap_bottom = false

[node name="PressurePlate" type="Node3D"]
script = ExtResource("1_g8tcr")

[node name="Button" type="StaticBody3D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("CylinderShape3D_sx3oq")

[node name="Hitbox" type="Area3D" parent="Button"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button/Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("CylinderShape3D_p34qk")

[node name="ButtonMesh" type="MeshInstance3D" parent="Button"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("CylinderMesh_81apy")
skeleton = NodePath("../..")

[node name="SoundOn" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_345y0")

[node name="SoundOff" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_tn8vh")

[connection signal="body_entered" from="Button/Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Button/Hitbox" to="." method="_on_hitbox_body_exited"]
